# telegram-ai-therapist

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  main.py  pyproject.toml
app/: exceptions.py  logging.py  models.py
app/db/: __init__.py  chat_crud.py  models.py  user_crud.py
app/gpt/: chat.py  greeting_cron_generator.py  llm.py  prompt.py
app/telegram_app/: __init__.py  app.py  schedule_handler.py
