[tool.poetry]
name = "telegram-ai-agents"
version = "0.1.0"
description = ""
authors = ["Navicstein <navicsteinrotciv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
python-telegram-bot = "^21.1"
langchain-community = "^0.0.32"
pydantic = "^2.7.0"
langchain = "^0.1.16"
litellm = "^1.35.4"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"
openai = "^1.21.2"
pydub = "^0.25.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
